[workspace]
members = [
    "packages/web-container"
]

resolver = "2"
[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
# lto = "fat"

# debug = true
# opt-level = 'z'

[profile.bench]
debug = true
# lto = true

# Optimize for iteration
[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3